ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ecommerce
  namespace: ecommerce
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ecommerce-ui
                port:
                  number: 4000
          - path: /inventory
            pathType: Prefix
            backend:
              service:
                name: product-inventory-service
                port:
                  number: 3002
          - path: /contact
            pathType: Prefix
            backend:
              service:
                name: contact-support-service
                port:
                  number: 8000
          - path: /product-catalog
            pathType: Prefix
            backend:
              service:
                name: product-catalog-service
                port:
                  number: 3001
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: order-management-service
                port:
                  number: 9090
          - path: /shipping
            pathType: Prefix
            backend:
              service:
                name: shipping-and-handling-service
                port:
                  number: 8088
          - path: /profile
            pathType: Prefix
            backend:
              service:
                name: profile-management-service
                port:
                  number: 3003
